--- a/composer.json
+++ b/composer.json
@@ -95,7 +95,10 @@
         }
     },
     "require-dev": {
+        "babdev/pagerfanta-bundle": "^4.4",
         "doctrine/doctrine-fixtures-bundle": "^3.6",
+        "pagerfanta/doctrine-orm-adapter": "^4.6",
+        "pagerfanta/twig": "^4.6",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
